<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>space.arim.injector</groupId>
	<artifactId>injector</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	
	<name>SolidInjector</name>
	<description>Modern and lightweight injector supporting javax and jarkarta.</description>
	<url>https://github.com/A248/SolidInjector</url>
	<inceptionYear>2020</inceptionYear>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<junit.version>5.7.0</junit.version>
		<mockito.version>4.6.1</mockito.version>
	</properties>
	
	<scm>
		<connection>scm:git:ssh://git@github.com/A248/SolidInjector.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/A248/SolidInjector.git</developerConnection>
		<url>http://github.com/A248/SolidInjector/tree/master</url>
	  <tag>HEAD</tag>
  </scm>
	
	<licenses>
		<license>
			<name>GNU Lesser General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>anandbeh</id>
			<name>Anand Beh</name>
			<email>anandebeh@gmail.com</email>
			<url>https://github.com/A248</url>
			<roles>
				<role>creator</role>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	
	<build>
		<plugins>
			<!-- JAR creation -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>8</release>
				</configuration>
				<executions>
					<execution>
						<id>default-compile</id>
						<configuration>
							<release>11</release>
						</configuration>
					</execution>
					<execution>
						<id>base-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>module-info.java</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>default-testCompile</id>
						<configuration>
							<release>11</release>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<!-- Testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation
					--add-modules jakarta.inject,java.inject
					--add-opens space.arim.injector/space.arim.injector.internal.spec=ALL-UNNAMED
					--add-opens space.arim.injector/space.arim.injector.internal.provider=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>

			<!-- Sources and javadoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<source>8</source>
					<excludePackageNames>space.arim.injector.internal:space.arim.injector.internal.*</excludePackageNames>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>javadoc</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>enforce-rules</id>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<rules>
						<requireJavaVersion>
							<version>17</version>
							<message>While this library maintains runtime compatibility with Java 8,
								it requires JDK 17 as a build-time requirement.</message>
						</requireJavaVersion>
						<requireNoRepositories>
							<message>Third-party repositories are not allowed</message>
						</requireNoRepositories>
						<requireReleaseDeps>
							<message>No snapshot dependencies are allowed</message>
						</requireReleaseDeps>
					</rules>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.0-M6</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
					<goals>clean deploy -DskipTests</goals>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<!-- Both dependencies are optional, so users can choose between them. -->
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject</artifactId>
			<version>1</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>jakarta.inject</groupId>
			<artifactId>jakarta.inject-api</artifactId>
			<version>2.0.0</version>
			<optional>true</optional>
		</dependency>
		<!--
		See module-info for a description of the state of JPMS with respect to the javax.inject namespace
		 It would normally not be possible to depend on both jakarta.inject 1.0.3
		and 2.0.0. However, this hack is required for building against the module java.inject.
		-->
		<dependency>
			<groupId>jakarta.inject.</groupId>
			<artifactId>jakarta.inject-api</artifactId>
			<version>1.0.3</version>
			<scope>provided</scope>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency> <!-- Junit Vintage is needed for TCK -->
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject-tck</artifactId>
			<version>1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>